--- a/Frontend/src/components/skills/skills.html
+++ b/Frontend/src/components/skills/skills.html
@@ -6,14 +6,10 @@
             My toolkit for building and exploring technology , from front-end to back-end, and into the world of AI.
         </p>
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10">
-            <div *ngFor="let skill of data" class="skill-card p-6 bg-neutral-50 rounded-lg text-center shadow-sm hover:shadow-md transition-shadow duration-300">
-                <div class="icon mb-4 text-4xl text-blue-500">
-                    <!-- <img [src]="skill.icon">
-                     -->
-                </div>
+        <div class="grid grid-cols-2 sm:grid-cols-4 lg:grid-cols-6 gap-8 mt-10">
+            <div *ngFor="let skill of data" class="skill-card p-2 bg-[#609e6d] rounded-4xl text-center shadow-sm hover:animate-pulse transition-shadow duration-300">
                 <h2 class="text-xl font-semibold mb-2 text-[#1b3221]">{{ skill.name }}</h2>
-                <p class="text-[#677e7c]">{{ skill.description }}</p>
+                <!-- <p class="text-[#677e7c]">{{ skill.description }}</p> -->
             </div>
         </div>
     </div>
