chore: removing and adding some items

--- a/Frontend/src/components/hero/hero.html
+++ b/Frontend/src/components/hero/hero.html
@@ -13,14 +13,16 @@
 
         <div class="flex flex-row gap-3 justify-center items-center-safe">
             <button class="bg-[#376743] hover:bg-[#376750] py-3 px-5 cursor-pointer rounded text-white">
-                View My Work 
-                <i class='bx bx-right-arrow-alt'></i> 
+                <a href="#projects">
+                    View My Work 
+                    <i class='bx bx-right-arrow-alt'></i> 
+                </a>
             </button>
 
-            <button class="hover:bg-[#d3b464] gap-3 py-3 px-5 cursor-pointer rounded border-[#d3b464] flex flex-row justify-center items-center">
+            <!-- <button class="hover:bg-[#d3b464] gap-3 py-3 px-5 cursor-pointer rounded border-[#d3b464] flex flex-row justify-center items-center">
                 Dowload Resume
                 <i class="bx bx-download"></i>
-            </button>
+            </button> -->
         </div>
     </div>
 </section>
