--- a/Frontend/src/components/footer/footer.html
+++ b/Frontend/src/components/footer/footer.html
@@ -4,10 +4,10 @@
         <div class="flex justify-center items-center">
             <a routerLink="/" class="flex justify-center items-center gap-2 font-headline text-lg font-semibold cursor-pointer">
             <!-- Replace with your Leaf icon -->
-            <svg class="h-6 w-6 text-primary" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+            <!-- <svg class="h-6 w-6 text-primary" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                 <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
-            </svg>
-            <span>Omphulusa Mashau</span>
+            </svg> -->
+            <span>Omphulusa.Eng</span>
             </a>
         </div>
 
