--- a/Frontend/src/components/header/header.html
+++ b/Frontend/src/components/header/header.html
@@ -4,11 +4,11 @@
 >
   <div class="container mx-auto flex h-16 items-center justify-between px-4 md:px-6 text-[#677e7c]">
     <!-- Logo -->
-    <a routerLink="/" class="flex items-center gap-2 font-headline text-lg font-semibold cursor-pointer">
+    <a *ngIf="!open" href="#hero" class="flex items-center gap-2 font-headline text-lg font-semibold cursor-pointer">
       <!-- Replace with your Leaf icon -->
-      <svg class="h-6 w-6 text-primary" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+      <!-- <svg class="h-6 w-6 text-primary" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
         <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
-      </svg>
+      </svg> -->
       <span>Omphulusa.Eng</span>
     </a>
 
@@ -37,9 +37,9 @@
           <i class="bx bx-x text-lg cursor-pointer border rounded-sm border-[#d3b464]"></i>
         </a>
         <a href="#hero" class="flex items-center gap-2 font-headline text-lg font-semibold cursor-pointer" (click)="closeMenu()">
-          <svg class="h-6 w-6 text-primary" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+          <!-- <svg class="h-6 w-6 text-primary" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
             <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
-          </svg>
+          </svg> -->
           <span>Omphulusa.Eng</span>
         </a>
         <nav class="flex flex-col gap-4">
